--- a/common/css/4261202.css
+++ b/common/css/4261202.css
@@ -1,6 +1,6 @@
 body {
 	text-align: center;
-	-webkit-user-select: none;
+	/*webkit-user-select: none;*/
 	background-color: black;
 	width: 100%;
 	height: 100%;
