--- a/common/css/4261202.css
+++ b/common/css/4261202.css
@@ -1,9 +1,11 @@
 body {
 	text-align: center;
 	/*webkit-user-select: none;*/
-	background-color: black;
-	width: 100%;
-	height: 100%;
+	/*background-color: black;*/
+	background: #000000;
+	background: -moz-linear-gradient(to right, #000000 0%, #0a1852 100%);
+	background: -webkit-linear-gradient(to right, #000000 0%, #0a1852 100%);
+	background: linear-gradient(to right, #000000 0%, #0a1852 100%);
 	color: white;
 }
 
